Closed
Bug 220562
Opened 22 years ago
Closed 22 years ago
Camino build busted. Fixes applied to widget/src/mozilla not applied to widget/src/cocoa
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: lordpixel, Assigned: lordpixel)
Details
Attachments
(3 files, 1 obsolete file)
|
4.55 KB,
patch
|
jst
:
superreview+
|
Details | Diff | Splinter Review |
|
4.46 KB,
text/plain
|
Details | |
|
1.15 KB,
patch
|
Details | Diff | Splinter Review |
JST made some changes to nsIContent.h, and fixed mac build bustage as decribed here:
http://bonsai.mozilla.org/cvsquery.cgi?branch=HEAD&file=mozilla/widget/src/mac/&date=week
(Changes for Spet 26th, if you look at this URL more than a week from then).
Unfortunately the same changes weren't applied in widget/src/camino, so camino
is busted, but all of the Tinderboxes are down! So no one noticed, it seems.
I also found this problem:
nsMenuX.cpp: In member function `virtual nsresult nsMenuX::AddMenu(nsIMenu*)':
nsMenuX.cpp:344: error: non-lvalue in unary `&'
nsMenuX.cpp: In member function `virtual nsresult nsMenuX::RemoveAll()':
nsMenuX.cpp:422: warning: comparison between signed and unsigned integer
expressions
which seems to be a problem building with GCC 3.3 that's fixed in widget/src/mac
but not widget/src/cocoa.
I'll follow up with some patches presently.
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #132311 -
Flags: superreview?(sfraser)
Attachment #132311 -
Flags: review?(pinkerton)
Comment 2•22 years ago
|
||
Comment on attachment 132311 [details] [diff] [review]
Applies changes made to widget/src/mac to widget/src/cocoa & applied a gcc 3.3 fix
Does GetChildAt() not addref?
Comment 3•22 years ago
|
||
Comment on attachment 132311 [details] [diff] [review]
Applies changes made to widget/src/mac to widget/src/cocoa & applied a gcc 3.3 fix
Nope, not any more. If you want strong references from GetChildAt(), assign the
return value into a nsCOMPtr, if not, we don't waste time refcounting.
sr=jst. Sorry for not catching this when checking in.
Attachment #132311 -
Flags: superreview?(sfraser) → superreview+
Comment 4•22 years ago
|
||
fixes landed. /me boggles at the api change.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Building mozilla part succeeded. but Building Camino part don't succeed.
Dec2002 Devtool and August2003-gcc3.3Updater
Comment 6•22 years ago
|
||
yeah, i just noticed that. anyone want to put up a patch for camino? i may be
able to get to it this afternoon, but probably not.
Comment 7•22 years ago
|
||
I am working on a paper poatch at work I can't code really. WIll try to put
somethin on tonight.
Comment 8•22 years ago
|
||
I'de like to thanks bryner@brianryner.com for applying the first files. I'm
dumb because I missed this last file.
Comment 9•22 years ago
|
||
sent to brian so He can, apply it
Attachment #132474 -
Attachment is obsolete: true
Comment 10•22 years ago
|
||
brian did the chek-in. Bustage gone.
Verified.
Comment 12•22 years ago
|
||
Comment on attachment 132311 [details] [diff] [review]
Applies changes made to widget/src/mac to widget/src/cocoa & applied a gcc 3.3 fix
We have a new Camino request flag which can be set multiple times for a patch.
Moving old review requests to the new flag. Sorry for the spam.
Attachment #132311 -
Flags: review?(pinkerton) → review?
Updated•22 years ago
|
Attachment #132311 -
Flags: review?
You need to log in
before you can comment on or make changes to this bug.
Description
•