fix camino build bustage, r=pink, sr=jst (bug 220562)